2022-08-30T08:09:38Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2954586881
* notice: last 14d: unq all: 4 7
* notice: prev accum: outdated-unq outdated-all / unq all: 16 46 / 21 54
* notice: next accum: outdated-unq outdated-all / unq all: 16 46 / 20 53
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
* notice: removed / changed dates: [] / [2022-08-16]

2022-08-29T16:08:32Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2950009118
* notice: last 14d: unq all: 5 8
* notice: prev accum: outdated-unq outdated-all / unq all: 16 46 / 20 53
* notice: next accum: outdated-unq outdated-all / unq all: 16 46 / 21 54
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-08-29]

2022-08-26T00:39:03Z:
* notice: last 14d: unq all: 4 7
* notice: prev accum: outdated-unq outdated-all / unq all: 16 46 / 19 52
* notice: next accum: outdated-unq outdated-all / unq all: 16 46 / 20 53
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-08-25]

2022-08-24T08:08:53Z:
* notice: last 14d: unq all: 3 6
* notice: prev accum: outdated-unq outdated-all / unq all: 16 46 / 18 48
* notice: next accum: outdated-unq outdated-all / unq all: 16 46 / 19 52
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [] / [2022-08-24]

2022-08-23T16:08:05Z:
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 15 45 / 18 48
* notice: next accum: outdated-unq outdated-all / unq all: 16 46 / 18 48
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-09] / []

2022-08-22T08:09:06Z: