@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-30T08:09:38Z",
-  "count_outdated" : 46,
-  "uniques_outdated" : 16,
-  "count" : 53,
-  "uniques" : 20,
+  "timestamp" : "2022-08-30T16:08:55Z",
+  "count_outdated" : 48,
+  "uniques_outdated" : 18,
+  "count" : 54,
+  "uniques" : 21,
   "views" : [
-    {
-      "timestamp": "2022-08-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-08-24T00:00:00Z",
       "count": 4,
