@@ -1,12 +1,7 @@
 {
-  "count": 7,
-  "uniques": 4,
+  "count": 6,
+  "uniques": 3,
   "views": [
-    {
-      "timestamp": "2022-08-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-24T00:00:00Z",
       "count": 4,
