@@ -1,3 +1,11 @@
+2022-08-30T16:08:55Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2957804138
+* notice: last 14d: unq all: 3 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 16 46 / 20 53
+* notice: next accum: outdated-unq outdated-all / unq all: 18 48 / 21 54
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-08-16] / []
+
 2022-08-30T08:09:38Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2954586881
 * notice: last 14d: unq all: 4 7
